# query_builder_agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  run.bat  run.sh
src/agent_app/: bootstrap.py  main.py
src/agent_app/agents/response_struct/: agent.py  model.py  nodes.py
src/agent_app/agents/sql_builder/: agent.py  model.py  nodes.py
src/agent_app/application/dto/: database_schema.py
src/agent_app/application/usecase/database_schema/: impl.py  interface.py
src/agent_app/container/: dependency_injection.py
src/agent_app/domain/entities/: database_schema.py
src/agent_app/infrastructure/repository/: database_schema.py  db_manager.py
src/agent_app/presentation/delivery/http/: server.py
src/agent_app/presentation/delivery/http/handlers/: database_schema.py
src/agent_app/presentation/middleware/: timeout_middleware.py
src/agent_app/shared/config/: model.py
src/agent_app/shared/database/connection/: create_connection.py  model.py  qdrant.py
src/agent_app/shared/database/helper/: database_helper.py  vectordb.py
src/agent_app/shared/embedding/: embedding.py
src/agent_app/shared/logging/: formatter.py  logger.py
src/agent_app/shared/model/: lifecycle.py  response.py
src/agent_app/shared/utils/: content.py
