[project]
name = "agent-app"
version = "0.1.0"
description = ""
authors = [
    {name = "dika",email = "muhammadandikakurniawan24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "grandalf (>=0.8,<0.9)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "pikepdf (>=10.5.1,<11.0.0)",
    "pypandoc-binary (>=1.17,<2.0)",
    "unstructured[all-docs] (>=0.22.27,<0.23.0) ; python_version >= \"3.11\" and python_version < \"3.13\"",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-json-logger (>=4.1.0,<5.0.0)",
    "dependency-injector (>=4.49.0,<5.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "scalar-fastapi (>=1.8.2,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth (>=2.54.0,<3.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "ipython (>=8.37,<9.0)",
]


[tool.poetry]
packages = [{include = "agent_app", from  = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
